--- a/node/docker-compose.yml
+++ b/node/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       PORT: 5000
       PGHOST: database
       PGUSER: postgres
+      PGPASSWORD: postgres
     ports:
       - "5000:5000"
     depends_on:
