--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,9 @@
   },
   "dependencies": {
     "csv-parse": "^5.5.6",
+    "csv-stringify": "^6.5.1",
     "express": "^4.19.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "pg-copy-streams": "^6.0.6"
   }
 }
