docker-compose: mentioned table name
Signed-off-by: Akash G <akashg.sde@gmail.com>

--- a/node/docker-compose.yml
+++ b/node/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       PGHOST: database
       PGUSER: postgres
       PGPASSWORD: postgres
+      PGTABLE: sensordata
     ports:
       - "5000:5000"
     depends_on:
